--- a/src/components/AboutMiddle/AboutMiddle.scss
+++ b/src/components/AboutMiddle/AboutMiddle.scss
@@ -141,7 +141,7 @@
             rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)
           ),
-          url("http://akbansalcompany.com/images/bridge.png");
+          url("../../../public/images/bridge.png");
         background-size: cover;
         width: 100%;
 
