--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -22,7 +22,7 @@
 }
 
 .btn.icon::after {
-  content: url("http://akbansalcompany.com/images/long-arrow-alt-right.svg");
+  content: url("../../../public/images/long-arrow-alt-right.svg");
   margin-left: 10px;
 }
 
