--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -1,6 +1,6 @@
 .page-header {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("http://akbansalcompany.com/images/about.png");
+    url("../../../public/images/about.png");
   height: 419px;
   background-size: cover;
 
