--- a/src/components/Services/Services.scss
+++ b/src/components/Services/Services.scss
@@ -27,7 +27,7 @@
   }
 
   .first-section {
-    background: url("http://akbansalcompany.com/images/section-right-one.png");
+    background: url("../../../public/images/section-right-one.png");
     background-size: cover;
     height: 600px;
     width: 33%;
@@ -72,7 +72,7 @@
   }
 
   .second-section {
-    background: url("http://akbansalcompany.com/images/section-right-two.png");
+    background: url("../../../public/images/section-right-two.png");
     background-size: cover;
     height: 600px;
     width: 33%;
@@ -116,7 +116,7 @@
   }
 
   .third-section {
-    background: url("http://akbansalcompany.com/images/section-right-three.png");
+    background: url("../../../public/images/section-right-three.png");
     background-size: cover;
     height: 600px;
     width: 33%;
