--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -1,6 +1,14 @@
-.page-header {
+.about-background-image {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../../../public/images/about.png");
+}
+
+.portfolio-background-image {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../../../public/images/portfolio.png");
+}
+
+.page-header {
   height: 419px;
   background-size: cover;
 
@@ -20,15 +28,15 @@
     position: relative;
 
     .left-content {
-      width: 50%;
-      text-align: left;
+      width: 100%;
+      text-align: center;
       margin: 0 auto;
 
       h2 {
         font-family: "Kanit";
         font-style: normal;
         font-weight: 600;
-        font-size: 40px;
+        font-size: 25px;
         color: #ffffff;
         margin: 0;
 
@@ -60,7 +68,7 @@
       padding: 12px 50px;
       position: absolute;
       right: 10%;
-      top: 95%;
+      top: 100%;
       width: 30%;
 
       @media screen and (max-width: 1100px) {
