services page integrated

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,10 +1,9 @@
-/* This CSS will print because %message-shared is extended. */
+/* This CSS will print because %p-css is extended. */
 %p-css {
   font-family: "Lato";
   font-style: normal;
   font-size: 17px;
   line-height: 28px;
-
   color: #41444b;
 }
 
