--- a/src/components/PortfolioMiddle/PortfolioMiddle.scss
+++ b/src/components/PortfolioMiddle/PortfolioMiddle.scss
@@ -1,7 +1,174 @@
+/* This CSS will print because %message-shared is extended. */
+%card-css {
+  height: 300px;
+}
+
 .portfolio-images {
   margin-top: 100px;
   .images {
-    display: grid;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 60%;
+    margin: 0 auto;
+    gap: 10px;
+
+    @media screen and (max-width: 1100px) {
+      width: 95%;
+      justify-content: center;
+    }
+
+    @media screen and (max-width: 700px) {
+      //flex-direction: column;
+      width: 90%;
+      gap: 9px;
+    }
+
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+      //width: 100%;
+      justify-content: flex-start;
+    }
+
+    .portfolio-image-one {
+      background: url("../../../public/images/ione.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-two {
+      background: url("../../../public/images/itwo.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-three {
+      background: url("../../../public/images/ithree.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-four {
+      background: url("../../../public/images/ifour.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-five {
+      background: url("../../../public/images/ifive.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-six {
+      background: url("../../../public/images/isix.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-seven {
+      background: url("../../../public/images/iseven.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-eight {
+      background: url("../../../public/images/ieight.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    .portfolio-image-nine {
+      background: url("../../../public/images/inine.png"), #d9d9d9;
+      height: 400px;
+      background-size: cover;
+      width: 32%;
+      @media screen and (max-width: 700px) {
+        height: 300px;
+        width: 32%;
+      }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        height: 400px;
+      }
+    }
+
+    /*display: grid;
     grid-template-columns: repeat(auto-fit, minmax(373px, 1fr));
     justify-items: center;
     align-items: center;
@@ -13,6 +180,6 @@
 
     @media screen and (max-width: 700px) {
       grid-gap: 15px;
-    }
+    }*/
   }
 }
