--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -22,6 +22,8 @@
 
   @media screen and (max-width: 1100px) {
     width: 100%;
+    flex-direction: column;
+    gap: 30px;
   }
 
   @media screen and (max-width: 700px) {
@@ -69,7 +71,7 @@
     align-items: center;
     margin-left: 40px;
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 1100px) {
       margin-left: 0;
     }
 
