--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -13,6 +13,11 @@
     url("../../../public/images/portfolio.png");
 }
 
+.contact-background-image {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../../../public/images/contact.png");
+}
+
 .page-header {
   height: 419px;
   background-size: cover;
