--- a/src/components/PortfolioMiddle/PortfolioMiddle.scss
+++ b/src/components/PortfolioMiddle/PortfolioMiddle.scss
@@ -20,150 +20,122 @@
     }
 
     @media screen and (max-width: 700px) {
-      //flex-direction: column;
       width: 90%;
       gap: 9px;
     }
 
     @media screen and (max-width: 480px) {
       flex-direction: column;
-      //width: 100%!important;
+      //width: 100%;
       justify-content: flex-start;
     }
 
     .portfolio-image-one {
-      background: url("../../../public/images/ione.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
 
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
 
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-two {
-      background: url("../../../public/images/itwo.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-three {
-      background: url("../../../public/images/ithree.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-four {
-      background: url("../../../public/images/ifour.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-five {
-      background: url("../../../public/images/ifive.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-six {
-      background: url("../../../public/images/isix.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-seven {
-      background: url("../../../public/images/iseven.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-eight {
-      background: url("../../../public/images/ieight.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
 
     .portfolio-image-nine {
-      background: url("../../../public/images/inine.png"), #d9d9d9;
-      height: 400px;
-      background-size: cover;
-      width: 100% !important;
+      width: 32%;
       @media screen and (max-width: 700px) {
         height: 300px;
-        width: 100% !important;
+        width: 32%;
       }
       @media screen and (max-width: 480px) {
-        width: 100% !important;
+        width: 100%;
         height: 400px;
       }
     }
